crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_webex__adaptivecard_basic.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "event": {
    "id": "<FIXED>",
    "provider": "webex",
    "summary": "card with title/body",
    "text": "adaptivecard basic message from webex",
    "timestamp": "<FIXED>",
    "type": "adaptivecard",
    "variant": "basic"
  },
  "ok": true
}
