crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_webex__adaptivecard_edge_cases.snap
---
source: crates/provider-tests/tests/provider_harness.rs
expression: value
---
{
  "event": {
    "channel": "webex",
    "id": "<FIXED>",
    "metadata": {
      "webex.event": "",
      "webex.fetchStatus": "200",
      "webex.hasAttachments": "false",
      "webex.resource": ""
    },
    "session_id": "webex",
    "tenant": {
      "attempt": 0,
      "env": "default",
      "tenant": "default",
      "tenant_id": "default"
    },
    "text": "Long text with markdown **bold** and newlines\nsecond line",
    "to": [
      {
        "id": "<FIXED>"
      }
    ]
  },
  "ok": true
}
