crates/provider-tests/tests/snapshots/provider_harness__inbound_snapshot_webex__simple_text.snap
---
source: crates/provider-tests/tests/provider_harness.rs
assertion_line: 878
expression: value
---
{
  "event": {
    "channel": "webex-channel",
    "id": "<FIXED>",
    "provider": "webex",
    "text": "simple text message from webex",
    "timestamp": "<FIXED>",
    "type": "message"
  },
  "ok": true
}
